[Extensions] Limit ExtensionWebUI

The bookmark manager needs a WebUI controller in order to change the
transition type for links. However, right now, we're creating WebUI for
every single extension.

Instead, *only* create WebUI for the bookmark manager.

Note that the ExtensionWebUI class is currently used for both this WebUI
and for chrome url overrides, which are very separate concepts and
should be split up, but I'll save that for a later CL.

BUG=659798

Review-Url: https://codereview.chromium.org/2452773002
Cr-Commit-Position: refs/heads/master@{#428747}

Former-commit-id: f9bc386d7f73366b45cb85848d27b4343facf45d